--- a/src/interfaces/Interface.form
+++ b/src/interfaces/Interface.form
@@ -171,7 +171,6 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
@@ -271,7 +270,7 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jTextField2" max="32767" attributes="0"/>
-                              <Component id="jButton31" pref="29" max="32767" attributes="0"/>
+                              <Component id="jButton31" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
