--- a/src/interfaces/Interface.form
+++ b/src/interfaces/Interface.form
@@ -173,7 +173,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="9" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jTextField2" max="32767" attributes="0"/>
