--- a/src/interfaces/Inicial.form
+++ b/src/interfaces/Inicial.form
@@ -73,7 +73,7 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="65" max="32767" attributes="0"/>
+                  <EmptySpace pref="113" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -152,13 +152,16 @@
         </Component>
         <Component class="javax.swing.JTextField" name="textIp">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Digite o IP"/>
+            <Property name="text" type="java.lang.String" value="192.168.0.105"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="textPorta">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Digite a porta"/>
+            <Property name="text" type="java.lang.String" value="5555"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textPortaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
